--- a/comulusUi/package.json
+++ b/comulusUi/package.json
@@ -74,6 +74,8 @@
     "ejs-electron": "^2.0.3",
     "electron-reload": "^1.5.0",
     "electron-squirrel-startup": "^1.0.0",
+    "moment": "^2.24.0",
+    "sqlite3": "^4.1.1",
     "update-electron-app": "^1.5.0"
   },
   "devDependencies": {
